removed the csrf protection

--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -24,7 +24,7 @@
         {% elif form_type == "sent_or_notfound" %}
         <div class="mb-3">
             <h2>If An Account Exists, Reset Link Sent</h2>
-            <h3>Please check your email for the password reset link. Make sure to check your spam folder.</h3>
+            <p>Please check your email for the password reset link. Make sure to check your spam folder.</p>
             <a href="{{ url_for('auth.login') }}" class="btn btn-primary">Go to Login</a>
         </div>
 
